corpus/literals.txt
=====================================
Integers
=====================================

-1
0xDEAD
0XDEAD
1j
-1j
0o123
0O123
0b001
0B001
1_1
0B1_1
0O1_1
0L

---

(module
  (expression_statement (unary_operator (integer)))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (unary_operator (integer)))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer)))

=====================================
Floats
=====================================

-.6_6
+.1_1
123.4123
123.123J
1_1.3_1
1_1.
1e+3_4j
.3e1_4
1_0.l
.1l

---

(module
  (expression_statement (unary_operator (float)))
  (expression_statement (unary_operator (float)))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float)))


=====================================
Scientific Notation Floats
=====================================

1e322
1e-3
1e+3
1.8e10
1.e10
-1e10

---

(module
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (unary_operator (float))))

=====================================
Strings
=====================================

"I'm ok"
'"ok"'
r'hi'
ur"bye"
b'sup'
`1`
"\\"
"/"
"multiline \
string"

---

(module
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string)))

=====================================
Other primitives
=====================================

True
False
None

---

(module
  (expression_statement (true))
  (expression_statement (false))
  (expression_statement (none)))

=====================================
Concatenated strings
=====================================

"one" "two" "three"

---

(module
  (expression_statement
    (concatenated_string
      (string)
      (string)
      (string))))

=====================================
Multi-line strings
=====================================

"""
A double quote hello,
without double or single quotes.
"""

"""
A double quote "hello",
with double quotes.
"""

"""
A double quote 'hello',
with single quotes.
"""

'''
A single quote hello,
without double or single quotes.
'''

'''
A single quote 'hello',
with single quotes.
'''

'''
A single quote "hello",
with double quotes.
'''

"""
A double quote hello\n\
with an escaped newline\n\
and another escaped newline\n\
"""

---

(module
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string)))

=====================================
Lists
=====================================

[a, b, [c, d]]
[*()]
[*[]]
[*a]
[*a.b]
[*a[b].c]

---

(module
  (expression_statement
    (list
      (identifier)
      (identifier)
      (list
        (identifier)
        (identifier))))
  (expression_statement (list (tuple)))
  (expression_statement (list (list)))
  (expression_statement (list (identifier)))
  (expression_statement (list (attribute (identifier) (identifier))))
  (expression_statement (list (attribute (subscript (identifier) (identifier)) (identifier)))))

=====================================
List comprehensions
=====================================

[a + b for (a, b) in items]
[a for b in c for a in b]
[(x,y) for x in [1,2,3] for y in [1,2,3] if True]
[a for a in lambda: True, lambda: False if a()]

---

(module
  (expression_statement
    (list_comprehension
      (binary_operator (identifier) (identifier))
      (for_in_clause
        (variables (tuple (identifier) (identifier))) (identifier))))
  (expression_statement
    (list_comprehension
      (identifier)
      (for_in_clause
        (variables (identifier))
        (identifier))
      (for_in_clause
        (variables (identifier))
        (identifier))))
  (expression_statement
    (list_comprehension
      (tuple (identifier) (identifier))
      (for_in_clause (variables (identifier))
        (list (integer) (integer) (integer)))
      (for_in_clause (variables (identifier))
        (list (integer) (integer) (integer)))
      (if_clause (true))))
  (expression_statement
    (list_comprehension
      (identifier)
      (for_in_clause (variables (identifier))
        (lambda (true))
        (lambda (false)))
      (if_clause (call (identifier) (argument_list))))))

=====================================
Dictionaries
=====================================

{a: 1, b: 2}
{}
{**{}}
{**a}
{**a.b}
{**a[b].c}

---

(module
  (expression_statement
    (dictionary
      (pair (identifier) (integer))
      (pair (identifier) (integer))))
  (expression_statement
    (dictionary))
  (expression_statement
    (dictionary (dictionary)))
  (expression_statement
    (dictionary (identifier)))
  (expression_statement
    (dictionary (attribute (identifier) (identifier))))
  (expression_statement
    (dictionary (attribute (subscript (identifier) (identifier)) (identifier)))))

=====================================
Dictionary comprehensions
=====================================

{a: b for a, b in items}
{a: b for c in d for e in items}

---

(module
  (expression_statement
    (dictionary_comprehension
      (pair (identifier) (identifier))
      (for_in_clause
        (variables (identifier) (identifier)) (identifier))))
  (expression_statement
    (dictionary_comprehension
      (pair (identifier) (identifier))
      (for_in_clause
        (variables (identifier)) (identifier))
      (for_in_clause (variables (identifier)) (identifier)))))

=====================================
Sets
=====================================

{a, b, c,}
{*{}}

---

(module
  (expression_statement
    (set
      (identifier)
      (identifier)
      (identifier)))
  (expression_statement (set (dictionary))))

=====================================
Set comprehensions
=====================================

{a[b][c] for a, b, c in items}
{r for s in qs for n in ms}

---

(module
  (expression_statement
    (set_comprehension
      (subscript (subscript (identifier) (identifier)) (identifier))
      (for_in_clause
        (variables (identifier) (identifier) (identifier))
        (identifier))))
  (expression_statement
    (set_comprehension
      (identifier)
      (for_in_clause
        (variables (identifier)) (identifier))
      (for_in_clause
        (variables (identifier)) (identifier)))))

=====================================
Tuples
=====================================

()
(a, b)
(a, b, c,)

---

(module
  (expression_statement (tuple))
  (expression_statement (tuple (identifier) (identifier)))
  (expression_statement (tuple (identifier) (identifier) (identifier))))

=====================================
Generator expression
=====================================

(a[b][c] for a, b, c in items)
dict((a, b) for a, b in d)
(a for b in c for d in e,)
(x for x in range(1, 10))

---

(module
  (expression_statement
    (generator_expression
      (subscript (subscript (identifier) (identifier)) (identifier))
      (for_in_clause
        (variables (identifier) (identifier) (identifier))
        (identifier))))
  (expression_statement
    (call
      (identifier)
      (generator_expression
        (tuple (identifier) (identifier))
        (for_in_clause
          (variables (identifier) (identifier))
          (identifier)))))
  (expression_statement
    (generator_expression
      (identifier)
      (for_in_clause
        (variables (identifier))
        (identifier))
      (for_in_clause
        (variables (identifier))
        (identifier))))
  (expression_statement
    (generator_expression
      (identifier)
      (for_in_clause
        (variables (identifier))
        (call (identifier) (argument_list (integer) (integer)))))))
